--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </form> 
 
     <div id= "depois1">
-<a id= "certo1"  href="file:///C:/Users/nicol/OneDrive/Documentos/anivers%C3%A1rio/bday3.html">CLICK HERE</a>
+<a id= "certo1"  href="https://elated-joliot-bdbbc1.netlify.app/">CLICK HERE</a>
 
 <p id= "falha" >YOU FAILED!</p>
 </div>
