--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p> now...</p>
 <p>Which one of these was John Dalton's fav color?</p>
  <form id= "question2" name= "question2">
-   <label for="cor1"><img src="img/cor1.png" width="100" height="120"></label>
+   <label for="cor1"><img src="https://i.ibb.co/RQTp28c/cor1.png" width="100" height="120"></label>
   <input type="radio" id="choice" name="choice" value="verde"><br>
   <label for="cor2"><img src="img/cor2.png" width="100" height="120">  </label>
   <input type="radio" id="choice" name="choice" value="laranja"><br>
