--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
  <form id= "question2" name= "question2">
    <label for="cor1"><img src="https://i.ibb.co/RQTp28c/cor1.png" width="100" height="120"></label>
   <input type="radio" id="choice" name="choice" value="verde"><br>
-  <label for="cor2"><img src="img/cor2.png" width="100" height="120">  </label>
+  <label for="cor2"><img src="https://i.ibb.co/kgGN14m/cor2.png" width="100" height="120">  </label>
   <input type="radio" id="choice" name="choice" value="laranja"><br>
- <label for="cor3"><img src="img/cor3.png" width="100" height="120"></label>
+ <label for="cor3"><img src="https://i.ibb.co/89X8B5K/cor3.png" width="100" height="120"></label>
   <input type="radio" id="choice" name="choice" value="nenhum"><br>
 
   <input id= "button" type="button" value="Check" onclick= "check();">
