--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><title> HMM.. you are right... </title> HMM.. you are right...
 <link href= "style.css" rel="stylesheet">
 <script src = "script1.js"></script> </head>
-<body>
+<body style="background-color:rgb(0, 215, 255, 0.6);">
 
 <p> now...</p>
 <p>Which one of these was John Dalton's fav color?</p>
